# converge

./: README.md
converge-client/: app.key  app.key.pub  index.html  package.json  vite.config.js
converge-client/src/: App.vue  main.js
converge-client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
converge-client/src-tauri/src/: action.rs  main.rs  util.rs
converge-client/src/components/: frame.vue  notice.vue
converge-client/src/components/js/: notice.js
converge-client/src/pages/: main.vue  setting.vue
converge-client/src/router/: index.js
converge-server/: pom.xml
converge-server/src/main/java/cn/ztion/converge/server/: ConvergeServerApplication.java
converge-server/src/main/java/cn/ztion/converge/server/config/: AppConfig.java
converge-server/src/main/java/cn/ztion/converge/server/controller/: MessageController.java
converge-server/src/main/java/cn/ztion/converge/server/domain/: AppConfigProp.java  Msg.java  R.java
converge-server/src/main/java/cn/ztion/converge/server/holder/: ClientHolder.java
converge-server/src/main/java/cn/ztion/converge/server/service/: MessageService.java  MessageServiceImpl.java
converge-server/src/main/resources/: application.properties  application.yml
converge-server/src/test/java/cn/ztion/converge/server/: ConvergeServerApplicationTests.java
