[package]
name = "Converge"
version = "1.0.0"
description = "焦距"
authors = ["ZtionJam"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "system-tray",
    "window-all",
    "path-all",
    "shell-open",
    "notification",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-shadows = "0.2.2"
reqwest = { version = "0.12.5", features = ["blocking", "gzip"] }
tokio = { version = "1.38.0", features = ["full"] }
lazy_static = "1.4.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
